# icer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
icer/: Cargo.toml
icer/src/: main.rs
libicer/: Cargo.toml
libicer/src/: icer.rs  lib.rs  params.rs
libicer/src/filter/: mod.rs  transform.rs
libicer/src/wavelet/: mod.rs  transform.rs
src/: filters.rs  lib.rs  wavelet.rs
src/wavelet/: mod.rs  transform.rs
