[workspace]
resolver = "2"
members = ["libicer", "icer"]

[workspace.package]
version = "0.1.0"
authors = ["Kleidi Bujari"]
edition = "2021"
repository = "https://github.com/kbujari/icer"
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
