[package]
name = "icer"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.5", features = ["derive"] }
libicer = { path = "../libicer" }
